WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205793
RemoteVideoSample::create does not need to take a MediaSample r value
https://bugs.webkit.org/show_bug.cgi?id=205793
Summary
RemoteVideoSample::create does not need to take a MediaSample r value
youenn fablet
Reported
2020-01-06 04:29:45 PST
RemoteVideoSample::create does not need to take a MediaSample r value
Attachments
Patch
(3.61 KB, patch)
2020-01-06 04:30 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-01-06 04:30:54 PST
Created
attachment 386830
[details]
Patch
WebKit Commit Bot
Comment 2
2020-01-06 07:02:20 PST
Comment on
attachment 386830
[details]
Patch Clearing flags on attachment: 386830 Committed
r254051
: <
https://trac.webkit.org/changeset/254051
>
WebKit Commit Bot
Comment 3
2020-01-06 07:02:21 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-01-06 07:03:16 PST
<
rdar://problem/58340912
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug