RemoteVideoSample::create does not need to take a MediaSample r value https://bugs.webkit.org/show_bug.cgi?id=205793

Reviewed by Eric Carlson.

Source/WebCore:

No change of behavior.

* platform/graphics/RemoteVideoSample.cpp:
(WebCore::RemoteVideoSample::create):
* platform/graphics/RemoteVideoSample.h:

Source/WebKit:

* UIProcess/Cocoa/UserMediaCaptureManagerProxy.cpp:


Canonical link: https://commits.webkit.org/218926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254051 268f45cc-cd09-0410-ab3c-d52691b4dbfc